--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,8 @@
 table{
 	background-color: rgb(255, 255, 0);
     border:1px solid rgb(0, 0, 0);
+	font-size:20px;
+}
+h1{
+/* 	text-align: center; */
 }
